objects/HVCA_Part_Selector__c.object
<CustomObject>
    <fields>
        <fullName>isHeatingBlanketSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isHeatingBlanketSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNemaPadSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNemaPadSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isShowOffer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isShowOffer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSliderPlate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSliderPlate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSpliceChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSpliceChecked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSplice_preQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSplice_preQuote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isStrutNut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isStrutNut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTerminationChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTerminationChecked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTermination_preQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTermination_preQuote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTradeColoumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTradeColoumn</label>
        <type>Checkbox</type>
    </fields>
    <label>HVCA Part Selector</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Termination_Output__c</columns>
        <columns>Splice_Output__c</columns>
        <columns>GIS_Output__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HVCA-{00000}</displayFormat>
        <label>HVCA Part Selector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HVCA Part Selectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>